[tool.poetry]
name = "spurious_emu"
version = "0.4.1"
description = "VBA static and dynamic analysis tool for malware analysts"
authors = ["Louis Dubois <ldbo@protonmail.com>"]
license = "AGPL-3.0-or-later"
readme= "Readme.md"
homepage = "https://github.com/ldbo/SpuriousEmu"
packages = [{include = "emu"}]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Visual Basic",
    "Topic :: Security",
    "Topic :: Software Development :: Interpreters",
]

[tool.poetry.scripts]
emu = "emu.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"
snakeviz = "^2.1.0"

[tool.poetry.dev-dependencies]
ipython = "^7.16.0"
nose = "^1.3.7"
coverage = "^5.2.1"
mypy = "^0.782"
ipdb = "^0.13.3"
bump2version = "^1.0.0"
black = "^19.10b0"
lxml = "^4.6.1"
gitchangelog = "^3.0.4"
pystache = "^0.5.4"
sphinx = "^3.3.0"
recommonmark = "^0.6.0"
sphinx_rtd_theme = "^0.5.0"
pre-commit = "^2.8.2"

[tool.black]
line-length = 80
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.venv
    |_build
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
py_version = 37
line_length = 80
known_third_party = "nose"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
