[tool.poetry]
name = "spurious_emu"
version = "0.4.1"
description = "VBA static and dynamic analysis tool for malware analysts"
authors = ["Louis Dubois <ldbo@protonmail.com>"]
license = "AGPL-3.0-or-later"
readme= "Readme.md"
homepage = "https://github.com/ldbo/SpuriousEmu"
packages = [{include = "emu"}]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Visual Basic",
    "Topic :: Security",
    "Topic :: Software Development :: Interpreters",
]

[tool.poetry.scripts]
emu = "emu.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
coverage = {extras = ["toml"], version = "^5.3"}
mypy = {extras = ["lxml"], version = "^0.790"}
black = "^19.10b0"
recommonmark = "^0.6.0"
pre-commit = "^2.9.3"
ipdb = {version = "^0.13.4", optional = true}
snakeviz = {version = "^2.1.0", optional = true}
ipython = {version = "^7.19.0", optional = true}
bump2version = {version = "^1.0.1", optional = true}
gitchangelog = {version = "^3.0.4", optional = true}
sphinx = {version = "^3.3.1", optional = false}
sphinx-rtd-theme = {version = "^0.5.0", optional = false}
lxml = "^4.6.2"

[tool.poetry.extras]
ipdb = ["ipdb"]
snakeviz = ["snakeviz"]
ipython = ["ipython"]
bump2version = ["bump2version"]
gitchangelog = ["gitchangelog"]
sphinx = ["sphinx"]
sphinx-rtd-theme = ["sphinx-rtd-theme"]


[tool.black]
line-length = 80
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.venv
    |_build
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
py_version = 37
line_length = 80
known_third_party = "nose"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"